# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  11 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Remove tail from depdir() in /sbin/modules-update

  10 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Document the boot logging option RC_BOOTLOG with app-admin/showconsole.

  08 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Add failup/faildown user functions when an interface fails to come up/go
    down. Fixes bug #101087.

  06 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Add a lot more documentation to /etc/hosts from FreeBSD's standard hosts 
    file #101418 by Mark Cooper.

  06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Revert 'mtime' changes to depscan.sh, and just make it warn if it detects
    that there are files with mtime in the future.

  06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Enhance gendepends.awk to check more than one level of dependencies.  Also
    break checking of NEED/USE/BEFORE/AFTER into more stages, so that we can
    but sure that all NEED's will override the rest, that USE will override
    BEFORE/AFTER, and also check both the resolved and unresolved trees.

    Also test if RUNLEVEL is '1' besides 'S', fixing 'init 1'.

    Hack init.d/clock to wait for /dev/rtc if compiled as a module ... hopefully
    udev will get sorted soon.

    Try a workaround for the "mtime in future" issues we have with depscan.sh.

  05 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Rationalise if/then/else login in runscript.sh svc_start() and svc_stop()

    Fixed a few quoting issues in iwconfig
    Use return values instead of capturing stderr output for iwconfig commands

    Added # vim:ts=4 to all net-script files and re-indented

    ${svcdir}/dep{cache,tree} are now chmodded 0644 so users can read them

  04 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:
